<resources>
    <string name="app_name">Rohitslist</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_order">Orders</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_signup">Sign up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_buyer">Rohit Smells These Nearby Vendors</string>

    <string name="place1">Ching Chong\'s Chang</string>
    <string name="p1i1">Bao Sha Ke Nu Dou Si</string>
    <string name="p1i2">Ou Ren Zhi Qi Ken</string>
    <string name="p1i3">General Ho\'s Chicken</string>
    <string name="p1i4">Croissant Dipped in Soy Sauce</string>

    <string name="place2">Curry in a Hurry</string>
    <string name="p2i1">Chicken Tikki Masala</string>
    <string name="p2i2">Buttered Chicken</string>
    <string name="p2i3">More Chicken With Butter</string>

    <string name="place3">Meat Inside Bread</string>
    <string name="p3i1">Sammich</string>
    <string name="p3i2">Reuben</string>
    <string name="p3i3">Milk</string>
    <string name="p3i4">Lard</string>

    <string name="place4">Bro\'s T-Cafe</string>
    <string name="p4i1">Fried Chicken Cutlet</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="title_activity_display_vendor_menu">DisplayVendorMenu</string>

    <string name="vendor_tag">vendor</string>
    <string name="title_activity_place_order_menu">placeOrderMenu</string>
</resources>
